movieDetail Page Implemented

--- a/React/tmdb_clone/src/components/movieCard/movieCard.css
+++ b/React/tmdb_clone/src/components/movieCard/movieCard.css
@@ -13,8 +13,9 @@
 .movie_card.small {
   width: 140px;
   min-width: 140px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   border: 1px solid #e3e3e3;
+  margin-bottom: 2px;
   overflow: hidden;
   border-radius: 8px;
 }
