--- a/React/tmdb_clone/src/components/scroller/scroller.css
+++ b/React/tmdb_clone/src/components/scroller/scroller.css
@@ -1,6 +1,11 @@
 .scroller_wrapper {
   width: 100%;
   position: relative;
+  opacity: 0;
+}
+.scroller_wrapper.scroller_transition {
+  opacity: 1;
+  transition: ease-in 0.5s;
 }
 .scroller_wrapper.default::after, .scroller_wrapper.medium::after {
   content: "";
