--- a/React/tmdb_clone/src/components/sectionTitle/sectionTitle.css
+++ b/React/tmdb_clone/src/components/sectionTitle/sectionTitle.css
@@ -19,11 +19,12 @@
   border: 1px solid #032541;
   border-radius: 30px;
 }
+.section_header .selector .anchor {
+  cursor: pointer;
+}
 .section_header .selector .anchor h3 {
   font-size: 1em;
   padding: 4px 20px;
-}
-.section_header .selector .anchor h3 a {
   transition: 0.4s ease-out;
   text-decoration: none;
   color: #032541;
@@ -33,8 +34,9 @@
   background-color: #032541;
   border: none;
   border-radius: 30px;
+  transition: linear 0.5s;
 }
-.section_header .selector .selected h3 a {
+.section_header .selector .selected h3 {
   background: linear-gradient(to right, #c0fecf 0, #1ed5a9 100%);
   -webkit-background-clip: text;
           background-clip: text;
