--- a/React/tmdb_clone/src/pages/detailedContent/detailedContent.scss
+++ b/React/tmdb_clone/src/pages/detailedContent/detailedContent.scss
@@ -30,6 +30,7 @@
           width: 300px;
           height: 450px;
           overflow: hidden;
+          transition: ease-in 0.5s;
 
           &.no_img {
             background-color: #dbdbdb;
