--- a/React/tmdb_clone/src/pages/filter/components/selectMenu/selectMenu.scss
+++ b/React/tmdb_clone/src/pages/filter/components/selectMenu/selectMenu.scss
@@ -33,7 +33,7 @@
   background: white;
   border: 1px solid rgb(230, 230, 230);
   border-radius: 5px;
-  width: 225px;
+  // width: 225px;
 
   .searchbar {
     margin: 16px;
