--- a/React/tmdb_clone/src/components/footer/footer.css
+++ b/React/tmdb_clone/src/components/footer/footer.css
@@ -34,11 +34,13 @@
   text-decoration: none;
 }
 .footer .footer_content .footer_column {
-  margin-right: 40px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+}
+.footer .footer_content .footer_column:not(:last-child) {
+  margin-right: 40px;
 }
 .footer .footer_content .footer_column .column_title {
   font-size: 1.4em;
@@ -59,4 +61,33 @@
   font-size: 17px;
   text-decoration: none;
   color: white;
+}
+
+@media screen and (max-width: 968px) {
+  .footer .footer_content {
+    padding: 40px;
+  }
+  .footer .footer_content .join {
+    top: 0;
+  }
+  .footer .footer_content .join img {
+    display: none;
+  }
+  .footer .footer_content .join .rounded {
+    top: 0;
+  }
+}
+@media screen and (max-width: 833px) {
+  .footer .footer_content {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .footer .footer_content .footer_column:not(:last-child) {
+    margin-right: 0px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .footer .footer_content {
+    padding: 40px 20px;
+  }
 }/*# sourceMappingURL=footer.css.map */
