--- a/React/tmdb_clone/src/components/header/Header.css
+++ b/React/tmdb_clone/src/components/header/Header.css
@@ -5,6 +5,9 @@
   justify-content: center;
   background-color: rgb(3, 37, 65);
 }
+.navbar .navbar__toggle {
+  display: none;
+}
 .navbar .navbar_content {
   width: 100%;
   max-width: 1400px;
@@ -65,4 +68,70 @@
 }
 .navbar .navbar_content .navbar_content_right .nav_links .nav_item .search {
   display: flex;
+}
+
+@media screen and (max-width: 872px) {
+  .navbar .navbar_content .navbar_content_left .nav_links,
+  .navbar .navbar_content .navbar_content_right .nav_links {
+    display: none;
+  }
+  .navbar .navbar__toggle {
+    display: block;
+    padding-right: 40px;
+    background: none;
+    border: none;
+    position: relative;
+    cursor: pointer;
+  }
+  .sidebar {
+    position: fixed;
+    top: 63px;
+    right: 0;
+    background-color: rgba(3, 37, 65, 0.9);
+    width: 200px;
+    height: 100vh;
+    text-align: right;
+    z-index: 10;
+    border-radius: 8px 0px 0px 8px;
+    padding-top: 10px;
+    padding-right: 40px;
+    color: white;
+  }
+  .sidebar .sidebar_links {
+    list-style: none;
+  }
+  .sidebar .sidebar_links .sidebar_link:not(:last-child) {
+    margin-bottom: 15px;
+  }
+  .nav_item {
+    display: block !important;
+    margin-bottom: 15px;
+  }
+  .nav_item .nav_link {
+    padding: 0 !important;
+    font-weight: 700;
+  }
+  .nav_item .menu_items_container {
+    top: 15px !important;
+  }
+  .nav_item .menu_items_container .menu_items .menu_item {
+    padding: 5px 0px;
+  }
+  .nav_item .menu_items_container .menu_items .menu_item .menu_link {
+    width: 100%;
+  }
+  .nav_item:not(:last-child) {
+    margin-right: 0px !important;
+  }
+}
+@media screen and (max-width: 500px) {
+  .navbar .navbar_content {
+    padding: 0 20px;
+  }
+  .navbar .navbar__toggle {
+    padding-right: 20px;
+  }
+  .sidebar {
+    padding-right: 20px;
+  }
 }/*# sourceMappingURL=header.css.map */
