--- a/React/tmdb_clone/src/components/movieCard/movieCard.css
+++ b/React/tmdb_clone/src/components/movieCard/movieCard.css
@@ -24,6 +24,7 @@
 }
 .movie_card.full {
   width: 180px;
+  min-width: 180px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   border-radius: 8px;
@@ -34,23 +35,26 @@
   min-height: 225px;
   max-height: 225px;
   overflow: hidden;
-  cursor: pointer;
 }
 .movie_card .movie_card_image .poster.default {
   border-radius: 8px;
+  cursor: pointer;
 }
 .movie_card .movie_card_image .poster.small {
   min-height: 175px;
   max-height: 175px;
 }
 .movie_card .movie_card_image .poster.full {
+  min-width: 180px;
   min-height: 270px;
   max-height: 270px;
+  cursor: pointer;
 }
 .movie_card .movie_card_image .poster.no_img {
   background-color: #dbdbdb;
 }
 .movie_card .movie_card_content {
+  max-width: 100%;
   position: relative;
   display: flex;
   flex-wrap: wrap;
@@ -66,12 +70,12 @@
   margin: 0;
   width: 100%;
   text-align: left;
-  cursor: pointer;
 }
 .movie_card .movie_card_content h2 a {
   text-decoration: none;
   color: black;
   transition: ease-in-out 0.1s;
+  cursor: pointer;
 }
 .movie_card .movie_card_content h2 a:hover {
   color: #01b4e4;
@@ -81,4 +85,36 @@
   margin: 0;
   padding: 0;
   color: rgba(0, 0, 0, 0.6);
+}
+.movie_card .movie_card_content .detail {
+  display: none;
+  margin-top: 20px;
+  word-break: break-word;
+  text-align: left;
+}
+
+@media screen and (max-width: 749px) {
+  .movie_card.full {
+    display: flex;
+    width: 100%;
+    height: 150px;
+    margin-bottom: 0px;
+  }
+  .movie_card.full .circular_progressbar.default {
+    display: none;
+  }
+  .movie_card .movie_card_content .detail {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    line-height: 21px;
+    max-height: 48px;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
+  .movie_card .movie_card_image .poster.full {
+    min-width: 94px;
+    min-height: 141px;
+  }
 }/*# sourceMappingURL=movieCard.css.map */
