--- a/React/tmdb_clone/src/components/movieCard/movieCard.scss
+++ b/React/tmdb_clone/src/components/movieCard/movieCard.scss
@@ -7,7 +7,6 @@
   top: 0;
   left: 0;
 
-
   &.default {
     &:not(:first-child) {
       margin-left: 20px;
@@ -18,7 +17,7 @@
     width: 140px;
     min-width: 140px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    border: 1px solid rgba(rgb(227,227,227),1);
+    border: 1px solid rgba(rgb(227, 227, 227), 1);
     margin-bottom: 2px;
     overflow: hidden;
     border-radius: 8px;
@@ -29,6 +28,7 @@
 
   &.full {
     width: 180px;
+    min-width: 180px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     border-radius: 8px;
@@ -41,10 +41,10 @@
       min-height: 225px;
       max-height: 225px;
       overflow: hidden;
-      cursor: pointer;
 
       &.default {
         border-radius: 8px;
+        cursor: pointer;
       }
 
       &.small {
@@ -53,17 +53,20 @@
       }
 
       &.full {
+        min-width: 180px;
         min-height: 270px;
         max-height: 270px;
+        cursor: pointer;
       }
 
       &.no_img {
-      background-color: #dbdbdb;
+        background-color: #dbdbdb;
       }
     }
   }
 
   .movie_card_content {
+    max-width: 100%;
     position: relative;
     display: flex;
     flex-wrap: wrap;
@@ -80,12 +83,12 @@
       margin: 0;
       width: 100%;
       text-align: left;
-      cursor: pointer;
 
       a {
         text-decoration: none;
         color: black;
         transition: ease-in-out 0.1s;
+        cursor: pointer;
 
         &:hover {
           color: rgba(rgb(1, 180, 228), 1);
@@ -99,5 +102,40 @@
       padding: 0;
       color: rgba(0, 0, 0, 0.6);
     }
+
+    .detail {
+      display: none;
+      margin-top: 20px;
+      word-break: break-word;
+      text-align: left;
+    }
+  }
+}
+
+@media screen and (max-width: 749px) {
+  .movie_card.full {
+    display: flex;
+    width: 100%;
+    height: 150px;
+    margin-bottom: 0px;
+
+    .circular_progressbar.default {
+      display: none;
+    }
+  }
+  .movie_card .movie_card_content .detail {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    line-height: 21px;
+    max-height: 48px;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
+
+  .movie_card .movie_card_image .poster.full {
+    min-width: 94px;
+    min-height: 141px;
   }
 }
