--- a/React/tmdb_clone/src/components/scroller/scroller.scss
+++ b/React/tmdb_clone/src/components/scroller/scroller.scss
@@ -4,7 +4,7 @@
   opacity: 0;
   &.scroller_transition {
     opacity: 1;
-    transition: ease-in .5s;
+    transition: ease-in 0.5s;
   }
 
   &.default,
@@ -33,6 +33,7 @@
     &.full {
       flex-wrap: wrap;
       justify-content: space-between;
+      gap: 20px;
     }
 
     &.default {
@@ -54,5 +55,28 @@
       border-radius: 50px;
       // padding-top: 50px;
     }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .scroller_wrapper .trending_scroller.default {
+    padding-left: 20px;
+  }
+}
+
+@media screen and (max-width: 1149px) {
+  .scroller_wrapper .trending_scroller.full {
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 20px;
+  }
+}
+
+@media screen and (max-width: 1149px) {
+  .scroller_wrapper .trending_scroller.full {
+    // flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 20px;
   }
 }
