--- a/React/tmdb_clone/src/pages/detailedContent/components/leftPanel/leftPanel.scss
+++ b/React/tmdb_clone/src/pages/detailedContent/components/leftPanel/leftPanel.scss
@@ -148,3 +148,30 @@
     padding-top: 30px;
   }
 }
+
+@media screen and (max-width: 1400px) {
+  .leftPanel {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .leftPanel {
+    width: 100%;
+    padding-right: 0;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .leftPanel
+    .social_panel_wrapper
+    .content
+    .review_header
+    .info
+    .rating_wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+    gap: 5px;
+  }
+}
