--- a/React/tmdb_clone/src/pages/filter/filter.scss
+++ b/React/tmdb_clone/src/pages/filter/filter.scss
@@ -286,7 +286,7 @@
       }
 
       .movie_detail_right {
-        width: 1051px;
+        max-width: 1051px;
         padding-left: 30px;
 
         // .trending_scroller {
@@ -330,5 +330,19 @@
     .react-datepicker-ignore-onclickoutside {
       outline: none;
     }
+  }
+}
+
+@media screen and (max-width: 749px) {
+  .movie_content_wrapper .movie_content .movie_detail {
+    flex-direction: column;
+    .movie_detail_left {
+      width: 100%;
+    }
+  }
+
+  .movie_content_wrapper .movie_content .movie_detail .movie_detail_right {
+    padding-top: 30px;
+    padding-left: 0px;
   }
 }
