media query added

--- a/React/tmdb_clone/src/components/footer/footer.scss
+++ b/React/tmdb_clone/src/components/footer/footer.scss
@@ -80,9 +80,22 @@
       }
       .rounded {
         top: 0;
+        font-size: 15px;
+        padding: 8px;
       }
     }
   }
+}
+
+@media screen and (max-width: 700px) {
+  .footer .footer_content .footer_column .column_title {
+    font-size: 1em;
+    font-weight: 600;
+  }
+  
+.footer .footer_content .footer_column .column_items .column_item .column_link {
+  font-size: 15px;
+}
 }
 
 @media screen and (max-width: 833px) {
