--- a/React/tmdb_clone/src/pages/detailedContent/components/trailerModel/trailerModel.scss
+++ b/React/tmdb_clone/src/pages/detailedContent/components/trailerModel/trailerModel.scss
@@ -1,14 +1,15 @@
 .trailer_model {
-  width: 1287px;
-  height: 786px;
+  width: 75%;
+  height: 40vw;
+  min-height: 300px;
   position: fixed;
+  overflow: hidden;
   .trailer_model_action {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: black;
+    background: rgb(77, 77, 77);
     color: white;
-    width: 100%;
     padding: 10px;
 
     .img_wrapper {
@@ -16,7 +17,7 @@
       padding: 5px;
       border-radius: 50%;
       cursor: pointer;
-      transition: linear .2s;
+      transition: linear 0.2s;
       img {
         width: 16px;
         height: 16px;
@@ -29,7 +30,7 @@
   }
   iframe {
     width: 100%;
-    height: calc(100% - 51px);
+    height: calc(100% - 53px);
     border: none;
   }
 }
@@ -44,6 +45,7 @@
     rgb(167, 166, 166) 150px,
     rgba(104, 103, 103, 0.84) 100%
   );
+  border: none;
   display: flex !important;
   justify-content: center;
   align-items: center;
