--- a/React/tmdb_clone/src/pages/filter/components/checkboxWrapper/checkboxWrapper.scss
+++ b/React/tmdb_clone/src/pages/filter/components/checkboxWrapper/checkboxWrapper.scss
@@ -3,7 +3,7 @@
   align-items: center;
   gap: 5px;
   margin-bottom: 5px;
-
+  
   input.availability_checkbox {
     appearance: none;
     width: 15px;
@@ -21,5 +21,9 @@
       border-color: #01b4e4;
       background-color: #01b4e4;
     }
+  }
+
+  .availability_desc {
+    cursor: pointer;
   }
 }
