--- a/React/tmdb_clone/src/components/header/header.scss
+++ b/React/tmdb_clone/src/components/header/header.scss
@@ -2,8 +2,12 @@
   width: 100%;
   height: 64px;
   display: flex;
+  position: fixed;
+  top: 0;
   justify-content: center;
   background-color: rgb(3, 37, 65);
+  transition: linear 0.3s;
+  z-index: 10;
 
   .navbar__toggle {
     display: none;
