--- a/React/tmdb_clone/src/pages/filter/components/selectMenu/selectMenu.scss
+++ b/React/tmdb_clone/src/pages/filter/components/selectMenu/selectMenu.scss
@@ -33,6 +33,7 @@
   background: white;
   border: 1px solid rgb(230, 230, 230);
   border-radius: 5px;
+  overflow: hidden;
   // width: 225px;
 
   .searchbar {
@@ -45,7 +46,6 @@
       border-radius: 0.25rem;
       line-height: 1.5;
       padding: 6px 32px 6px 12px;
-      // background-color: #fff;
     }
 
     &:focus {
