media query added

--- a/React/tmdb_clone/src/components/navbarMenu/navbarMenu.scss
+++ b/React/tmdb_clone/src/components/navbarMenu/navbarMenu.scss
@@ -43,6 +43,8 @@
           cursor: pointer;
           font-weight: 400;
           text-decoration: none;
+          width: 100%;
+          text-align: left;
         }
 
         &:hover {
