--- a/React/tmdb_clone/src/components/navbarMenu/navbarMenu.css
+++ b/React/tmdb_clone/src/components/navbarMenu/navbarMenu.css
@@ -39,6 +39,8 @@
   cursor: pointer;
   font-weight: 400;
   text-decoration: none;
+  width: 100%;
+  text-align: left;
 }
 .nav_item .menu_items_container .menu_items .menu_item:hover {
   background-color: #f8f9fa;
