--- a/React/tmdb_clone/src/pages/detailedContent/detailedContent.scss
+++ b/React/tmdb_clone/src/pages/detailedContent/detailedContent.scss
@@ -7,6 +7,7 @@
     background-size: cover;
     margin: 0 auto;
     background-position: calc((((100vw / 2.222222) - 20px) / 1.5) / 2) 0;
+    margin-top: 64px;
 
     .background_gradiant {
       background: linear-gradient(
@@ -319,7 +320,6 @@
     margin-bottom: 10px;
   }
 }
-
 
 @media screen and (max-width: 920px) {
   .wrapper {
