--- a/React/tmdb_clone/src/pages/filter/filter.css
+++ b/React/tmdb_clone/src/pages/filter/filter.css
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  margin-top: 64px;
 }
 .movie_content_wrapper .movie_content {
   width: 100%;
