--- a/React/tmdb_clone/src/pages/filter/filter.css
+++ b/React/tmdb_clone/src/pages/filter/filter.css
@@ -303,4 +303,9 @@
   .movie_content_wrapper .movie_content .movie_detail .movie_detail_right .load_button_wrapper .load_button {
     font-size: 1.3rem;
   }
+}
+@media screen and (max-width: 500px) {
+  .movie_content_wrapper .movie_content {
+    padding: 30px 20px;
+  }
 }/*# sourceMappingURL=filter.css.map */
