--- a/React/tmdb_clone/src/components/header/Header.css
+++ b/React/tmdb_clone/src/components/header/Header.css
@@ -104,28 +104,8 @@
   .sidebar .sidebar_links {
     list-style: none;
   }
-  .sidebar .sidebar_links .sidebar_link:not(:last-child) {
-    margin-bottom: 15px;
-  }
-  .nav_item {
-    display: block !important;
-    margin-bottom: 15px;
-  }
-  .nav_item .nav_link {
-    padding: 0 !important;
-    font-weight: 700;
-  }
-  .nav_item .menu_items_container {
-    top: 15px !important;
-  }
-  .nav_item .menu_items_container .menu_items .menu_item {
-    padding: 5px 0px;
-  }
-  .nav_item .menu_items_container .menu_items .menu_item .menu_link {
-    width: 100%;
-  }
-  .nav_item:not(:last-child) {
-    margin-right: 0px !important;
+  .sidebar .sidebar_links .sidebar_link {
+    padding: 8px 0px;
   }
 }
 @media screen and (max-width: 500px) {
